--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "author": "WeAreAthlon <hello@weareathlon.com> (https://www.weareathlon.com)",
-  "name": "@weareathlon/frontend-webpack-boilerplate",
+  "name": "my-room",
   "version": "1.0.0",
+  "repository": "git@github.com:PedroLimaSilva/my-room.git",
+  "author": "Pedro Lima e Silva <pedrocaslsilva403@gmail.com>",
+  "license": "MIT",
+  "private": false,
   "browserslist": [
     "last 2 versions",
     "> 5%"
@@ -40,8 +43,6 @@
   "engines": {
     "node": "^12 || >=14"
   },
-  "license": "MIT",
-  "private": false,
   "scripts": {
     "build": "webpack --config config/webpack.dev.config.js --mode=development",
     "watch": "webpack --config config/webpack.dev.config.js --mode=development --watch",
@@ -52,5 +53,8 @@
     "lint:js": "eslint --ext .js src/js/",
     "stats": "webpack --config config/webpack.prod.config.js --mode=production --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json"
   },
-  "target": "web"
+  "target": "web",
+  "dependencies": {
+    "three": "^0.135.0"
+  }
 }
